// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: CheckBoxField should render a checkbox field 1`] = `
<DocumentFragment>
  .c5 {
  vertical-align: middle;
}

.c3 {
  opacity: 0;
  border: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border: 2px solid hsl(200,10%,20%);
  background: none;
  border-radius: 1px;
}

.c4 svg {
  visibility: hidden;
  display: block;
  color: hsl(0,0%,100%);
  width: 12px;
  height: 12px;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  cursor: pointer;
}

.c2 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: hsl(200,96%,35%);
}

.c2 input:checked ~ span svg {
  visibility: visible;
}

.c2 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c7 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 400;
  color: hsl(200,10%,20%);
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c6 {
  cursor: pointer;
  padding-left: 8px;
}

<div
    class="c0 c1"
  >
    <label
      class="c2"
      for="my-id"
    >
      <input
        class="c3"
        id="my-id"
        name="checkbox-test"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="c4"
      >
        <svg
          class="c5"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
          />
        </svg>
      </span>
    </label>
    <label
      class="c6 c7"
      for="my-id"
    >
      SoIA
    </label>
  </div>
</DocumentFragment>
`;

exports[`component: CheckBoxField should render a disabled checkbox field 1`] = `
<DocumentFragment>
  .c5 {
  vertical-align: middle;
}

.c3 {
  opacity: 0;
  border: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border: 2px solid hsl(0,0%,90%);
  background: hsl(0,0%,90%);
  border-radius: 1px;
}

.c4 svg {
  visibility: hidden;
  display: block;
  color: hsl(0,0%,100%);
  width: 12px;
  height: 12px;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  cursor: cursor;
}

.c2 input:checked ~ span svg {
  visibility: visible;
}

.c2 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c7 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 400;
  color: hsl(200,10%,20%);
}

.c8 + .c0 {
  margin-top: 8px;
}

.c8 .c6 {
  cursor: pointer;
  padding-left: 8px;
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c6 {
  cursor: not-allowed;
  padding-left: 8px;
}

<div
    class="c0 c1"
  >
    <label
      class="c2"
      for="my-id"
    >
      <input
        class="c3"
        disabled=""
        id="my-id"
        name="checkbox-test"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="c4"
        disabled=""
      >
        <svg
          class="c5"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
          />
        </svg>
      </span>
    </label>
    <label
      class="c6 c7"
      for="my-id"
    >
      NMNL
    </label>
  </div>
</DocumentFragment>
`;

exports[`component: CheckBoxField should support margin space props 1`] = `
<DocumentFragment>
  .c5 {
  vertical-align: middle;
}

.c3 {
  opacity: 0;
  border: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border: 2px solid hsl(200,10%,20%);
  background: none;
  border-radius: 1px;
}

.c4 svg {
  visibility: hidden;
  display: block;
  color: hsl(0,0%,100%);
  width: 12px;
  height: 12px;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  cursor: pointer;
}

.c2 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: hsl(200,96%,35%);
}

.c2 input:checked ~ span svg {
  visibility: visible;
}

.c2 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c7 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 400;
  color: hsl(200,10%,20%);
}

.c8 + .c0 {
  margin-top: 8px;
}

.c8 .c6 {
  cursor: pointer;
  padding-left: 8px;
}

.c9 + .c0 {
  margin-top: 8px;
}

.c9 .c6 {
  cursor: not-allowed;
  padding-left: 8px;
}

.c1 {
  margin-right: 8px;
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c6 {
  cursor: pointer;
  padding-left: 8px;
}

<div
    class="c0 c1"
  >
    <label
      class="c2"
      for="not-random"
    >
      <input
        class="c3"
        id="not-random"
        name="space_props"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="c4"
      >
        <svg
          class="c5"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
          />
        </svg>
      </span>
    </label>
    <label
      class="c6 c7"
      for="not-random"
    >
      space props
    </label>
  </div>
</DocumentFragment>
`;
